# internal/handler/http/api/admin/getUser.go
@@ -13,12 +13,13 @@ import (
 // @Tags Admin
 // @Accept application/json
 // @Produce application/json
-// @Param user body e.GetUserInput true "no_comm"
+// @Param user body e.GetUserReq true "no_comm"
 // @Success 200 {object} http_.Resp[e.UserCommonInfo]
 // @Failure 400 {object} http_.RespErr
+// @Failure 200 {object} http_.RespErr
 // @Router /admin/get_user/ [post]
 func (h *Handler) getUser(c *gin.Context) {
-	var input e.GetUserInput
+	var input e.GetUserReq
 	err := c.BindJSON(&input)
 
 	if err != nil {
@@ -28,10 +29,10 @@ func (h *Handler) getUser(c *gin.Context) {
 	h.logger.Info("Parsed input")
 	user, err := h.uc.GetUser(context.Background(), input)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		c.JSON(http.StatusOK, http_.RespInternalErr(err))
 		return
 	}
 
-	result := http_.Resp[e.UserCommonInfo]{Message: "Success", Result: user.Info}
-	c.JSON(http.StatusOK, gin.H{"result": result})
+	resp := http_.Resp[e.UserCommonInfo]{Message: "Success", Result: user.Info}
+	c.JSON(http.StatusOK, resp)
 }
